--- a/invoice/document.html
+++ b/invoice/document.html
@@ -193,8 +193,8 @@
 												לקוחות וספקים
 											</span>
 											<ul class="dropDownWrapper_list dropDownWrapper_list_userMenu">
-												<li><a href="./client-page.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_download"/></svg> ספקים</a></li>
-												<li><a href="./client-page.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_suitcase"/></svg> סוכנים</a></li>
+												<li><a href="./client-flow-providers.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_download"/></svg> ספקים</a></li>
+												<li><a href="./client-flow-providers.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_suitcase"/></svg> סוכנים</a></li>
 											</ul>
 										</li>
 										<li>
