--- a/invoice/client-page.html
+++ b/invoice/client-page.html
@@ -186,7 +186,7 @@
 												קטלוג
 											</span>
 										</li>
-										<li><a href="./client-page.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_user"/></svg> לקוחות</a></li>
+										<li><a href="./client-flow-providers.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_user"/></svg> לקוחות</a></li>
 										<li class="dropDownWrapper">
 											<span>
 												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_usersGroup"/></svg>											
@@ -295,43 +295,44 @@
 		</div>
 	</div>
 
-	<!-- modal_active - display flex -->
-	<div class="modal modal_info">
-		<div class="modal_body">
-			<div class="modal_head">
-				<div class="modal_close">
-					<img src="./img/icons/modal_close.svg" alt="modal close">
-				</div>
+<!-- modal -->
+<div class="modal modal_info">
+	<div class="modal_body">
+		<div class="modal_head">
+			<div class="modal_close">
+				<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_modalClose"/></svg>
 			</div>
-			<div class="modal_content">
-				<div class="modal_logo">
-					<img src="./img/icons/modalLogo.svg" alt="modal logo">
-					<h2>אוי, כמה חבל.</h2>
-					<p>אין לכם מודול סליקת כרטיסי אשראי ICREDIT.</p>
-					<p>על מנת לחייב לקוחות באשראי ישירות מתוך המסמך, נדרש להפעיל את המודול.</p>
-					<p></p>
-					<p>למידע נוסף והצטרפות - <a href="/">לחצו</a></p>
-				</div>
+		</div>
+		<div class="modal_content">
+			<div class="modal_logo">
+				<img src="./img/icons/modalLogo.svg" alt="modal logo">
+				<h2>אוי, כמה חבל.</h2>
+				<p>אין לכם מודול סליקת כרטיסי אשראי ICREDIT.</p>
+				<p>על מנת לחייב לקוחות באשראי ישירות מתוך המסמך, נדרש להפעיל את המודול.</p>
+				<p></p>
+				<p>למידע נוסף והצטרפות - <a href="/">לחצו</a></p>
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="modal modal_documents documentsCopyList">
-		<div class="modal_body">
-			<div class="modal_head d-flex justify-content-between align-items-center">
-				<div class="modal_close">
-					<img src="./img/icons/modal_close.svg" alt="modal close">
-				</div>
-				<div class="modal_title">שכפול ממסמך</div>
+<div class="modal modal_documents documentsCopyList">
+	<div class="modal_body">
+		<div class="modal_head d-flex justify-content-between align-items-center">
+			<div class="modal_close">
+				<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_modalClose"/></svg>
 			</div>
-			<div class="modal_content">
-				<form class="searchForm">
-					<label class="inputWrapper searchField">
-						<span class="searchButton"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_search"/></svg></span>
-						<input type="search" placeholder="חיפוש גלובלי...">
-					</label>
-				</form>
-				<div class="searchResult">נמצאו <span class="searchResult_count">51 רשומות</span></div>
+			<div class="modal_title">שכפול ממסמך</div>
+		</div>
+		<div class="modal_content">
+			<form class="searchForm">
+				<label class="inputWrapper searchField">
+					<span class="searchButton"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_search"/></svg></span>
+					<input type="search" placeholder="חיפוש גלובלי...">
+				</label>
+			</form>
+			<div class="searchResult">נמצאו <span class="searchResult_count">51 רשומות</span></div>
+			<div class="tableFlask_documents">
 				<div class="tableWrapper">
 					<table class="tableInvoiceList tableDocumentsList">
 						<thead>
@@ -562,23 +563,25 @@
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="modal modal_documents documentsImportList">
-		<div class="modal_body">
-			<div class="modal_head d-flex justify-content-between align-items-center">
-				<div class="modal_close">
-					<img src="./img/icons/modal_close.svg" alt="modal close">
-				</div>
-				<div class="modal_title">שכפול ממסמך</div>
+<div class="modal modal_documents documentsImportList">
+	<div class="modal_body">
+		<div class="modal_head d-flex justify-content-between align-items-center">
+			<div class="modal_close">
+				<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_modalClose"/></svg>
 			</div>
-			<div class="modal_content">
-				<form class="searchForm">
-					<label class="inputWrapper searchField">
-						<span class="searchButton"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_search"/></svg></span>
-						<input type="search" placeholder="חיפוש גלובלי...">
-					</label>
-				</form>
-				<div class="searchResult">נמצאו <span class="searchResult_count">51 רשומות</span></div>
+			<div class="modal_title">שכפול ממסמך</div>
+		</div>
+		<div class="modal_content">
+			<form class="searchForm">
+				<label class="inputWrapper searchField">
+					<span class="searchButton"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_search"/></svg></span>
+					<input type="search" placeholder="חיפוש גלובלי...">
+				</label>
+			</form>
+			<div class="searchResult">נמצאו <span class="searchResult_count">51 רשומות</span></div>
+			<div class="tableFlask_documents">
 				<div class="tableWrapper">
 					<table class="tableInvoiceList tableDocumentsList tableImportList">
 						<thead>
@@ -716,13 +719,15 @@
 						</tbody>
 					</table>
 				</div>
-				<p class="documentsImport_description">המסמכים המסומנים יסגרו ופרטיהם יקלטו במסמך החדש.</p>
-				<div class="documentsImport_buttonWrapper">
-					<button class="documentAdd_button">סגור מסמכים מסומנים</button>
-				</div>
+			</div>
+			<p class="documentsImport_description">המסמכים המסומנים יסגרו ופרטיהם יקלטו במסמך החדש.</p>
+			<div class="documentsImport_buttonWrapper">
+				<button class="documentAdd_button">סגור מסמכים מסומנים</button>
 			</div>
 		</div>
 	</div>
+</div>
+<!-- modal -->
 
 	<svg fill="none" xmlns="http://www.w3.org/2000/svg" style="display:none">
 
@@ -955,6 +960,10 @@
 
 <symbol id="ico_infoDoubleChevron" viewBox="0 0 24 25">
 	<path d="M17 16.0256L13 12.0256L17 8.02563M11 16.0256L7 12.0256L11 8.02563" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+</symbol>
+
+<symbol id="ico_modalClose" viewBox="0 0 24 25">
+	<path d="M17.9962 18.5L6.17383 6.5M17.9962 6.5L6.17383 18.5" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </symbol>
 
 </svg>
