--- a/invoice/document.html
+++ b/invoice/document.html
@@ -190,7 +190,7 @@
 										<li class="dropDownWrapper">
 											<span>
 												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_usersGroup"/></svg>											
-												לקוחות וספקים
+												ספקים וסוכנים
 											</span>
 											<ul class="dropDownWrapper_list dropDownWrapper_list_userMenu">
 												<li><a href="./client-flow-providers.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_download"/></svg> ספקים</a></li>
@@ -376,7 +376,7 @@
 												<div class="documentBlock_footer d-flex justify-content-between align-items-center">
 													<span class="logo"><img src="./img/content/mainLogo.svg" alt="שם אתר"></span>
 													<ul>
-														<li>03.12.2022 15:36:04</li>
+														<li><span>15:36</span> 03.12.2022</li>
 														<li>מסמך ממוחשב</li>
 														<li>עמוד 1 מתוך 2</li>
 													</ul>
@@ -476,7 +476,7 @@
 												<div class="documentBlock_footer d-flex justify-content-between align-items-center">
 													<span class="logo"><img src="./img/content/mainLogo.svg" alt="שם אתר"></span>
 													<ul>
-														<li>03.12.2022 15:36:04</li>
+														<li><span>15:36</span> 03.12.2022</li>
 														<li>מסמך ממוחשב</li>
 														<li>עמוד 2 מתוך 2</li>
 													</ul>
