--- a/invoice/index.html
+++ b/invoice/index.html
@@ -190,7 +190,7 @@
 										<li class="dropDownWrapper">
 											<span>
 												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_usersGroup"/></svg>											
-												לקוחות וספקים
+												ספקים וסוכנים
 											</span>
 											<ul class="dropDownWrapper_list dropDownWrapper_list_userMenu">
 												<li><a href="./client-flow-providers.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_download"/></svg> ספקים</a></li>
