--- a/invoice/client-page.html
+++ b/invoice/client-page.html
@@ -80,16 +80,16 @@
 									</div>
 									<!-- listActive - activate menu -->
 									<ul class="documentAdd_list">
-										<li><a href="/">חשבונית מס</a></li>
-										<li><a href="/">קבלה</a></li>
-										<li><a href="/">חשבונית מס / קבלה</a></li>
-										<li><a href="/">חשבונית מס זיכוי</a></li>
-										<li><a href="/">חשבון עסקה</a></li>
-										<li><a href="/">הזמנת עבודה</a></li>
-										<li><a href="/">הצעת מחיר</a></li>
-										<li><a href="/">תעודת משלוח</a></li>
-										<li><a href="/">תעודת החזרה</a></li>
-										<li><a href="/">חשבונית עבור קבלה</a></li>
+										<li><a href="./document.html">חשבונית מס</a></li>
+										<li><a href="./document.html">קבלה</a></li>
+										<li><a href="./document.html">חשבונית מס / קבלה</a></li>
+										<li><a href="./document.html">חשבונית מס זיכוי</a></li>
+										<li><a href="./document.html">חשבון עסקה</a></li>
+										<li><a href="./document.html">הזמנת עבודה</a></li>
+										<li><a href="./document.html">הצעת מחיר</a></li>
+										<li><a href="./document.html">תעודת משלוח</a></li>
+										<li><a href="./document.html">תעודת החזרה</a></li>
+										<li><a href="./document.html">חשבונית עבור קבלה</a></li>
 									</ul>
 								</div>
 							</div>
@@ -190,7 +190,7 @@
 										<li class="dropDownWrapper">
 											<span>
 												<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_usersGroup"/></svg>											
-												לקוחות וספקים
+												ספקים וסוכנים
 											</span>
 											<ul class="dropDownWrapper_list dropDownWrapper_list_userMenu">
 												<li><a href="./client-flow-providers.html"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_userGroup_download"/></svg> ספקים</a></li>
