--- a/invoice/client-page-more.html
+++ b/invoice/client-page-more.html
@@ -300,7 +300,7 @@
 																		<u>haimcohen@zgugiotkukiot.co.il</u></a></li>
 																	<li><a href="tel:052-45678910"><svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_infoPhone"/></svg> 052-45678910</a></li>
 																	<li class="dataPanel_address">
-																		<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_infoMapPin"/></svg>
+																		<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_infoMapPin"/></svg>
 																		<p>
 																			כנפי ינשופים 24,<br>
 																			מצפה טרופותי <br>
@@ -524,6 +524,91 @@
 																						</div>
 																					</td>
 																				</tr>
+																				<tr>
+																					<td>6048590</td>
+																					<td>חשבונית מס / קבלה</td>
+																					<td>24/05/2021</td>
+																					<td>550,555,678.56</td>
+																					<td>USD</td>
+																					<td>
+																						<div class="dataPanel_table_buttonsWrapper">
+																							<a href="#">
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_show"></use></svg>
+																							</a>
+																							<button>
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_infoDuplicate"></use></svg>
+																							</button>
+																						</div>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>6048590</td>
+																					<td>חשבונית מס / קבלה</td>
+																					<td>24/05/2021</td>
+																					<td>550,555,678.56</td>
+																					<td>USD</td>
+																					<td>
+																						<div class="dataPanel_table_buttonsWrapper">
+																							<a href="#">
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_show"></use></svg>
+																							</a>
+																							<button>
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_infoDuplicate"></use></svg>
+																							</button>
+																						</div>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>6048590</td>
+																					<td>חשבונית מס / קבלה</td>
+																					<td>24/05/2021</td>
+																					<td>550,555,678.56</td>
+																					<td>USD</td>
+																					<td>
+																						<div class="dataPanel_table_buttonsWrapper">
+																							<a href="#">
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_show"></use></svg>
+																							</a>
+																							<button>
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_infoDuplicate"></use></svg>
+																							</button>
+																						</div>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>6048590</td>
+																					<td>חשבונית מס / קבלה</td>
+																					<td>24/05/2021</td>
+																					<td>550,555,678.56</td>
+																					<td>USD</td>
+																					<td>
+																						<div class="dataPanel_table_buttonsWrapper">
+																							<a href="#">
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_show"></use></svg>
+																							</a>
+																							<button>
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_infoDuplicate"></use></svg>
+																							</button>
+																						</div>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>6048590</td>
+																					<td>חשבונית מס / קבלה</td>
+																					<td>24/05/2021</td>
+																					<td>550,555,678.56</td>
+																					<td>USD</td>
+																					<td>
+																						<div class="dataPanel_table_buttonsWrapper">
+																							<a href="#">
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_show"></use></svg>
+																							</a>
+																							<button>
+																								<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoFill" xlink:href="#ico_infoDuplicate"></use></svg>
+																							</button>
+																						</div>
+																					</td>
+																				</tr>
 																			</tbody>
 																		</table>
 																	</div>
@@ -536,6 +621,9 @@
 																<h2>הכנסות מלקוח</h2>
 																<div class="dataPanel_lottie">
 
+																</div>
+																<div class="dataPanel_lottieGraph">
+																	<img src="./img/media/graph.svg" alt="graph">
 																</div>
 															</div>
 														</div>
@@ -1482,13 +1570,20 @@
 																<input type="checkbox">
 																<span></span>
 															</label>
-															<select data-type="documentCurrency" class="documentData_selectCode">
-																<option value="">0+</option>
-																<option value='10+'>10+</option>
-																<option value='30+'>30+</option>
-																<option value='45+'>45+</option>
-																<option value='9'>9+</option>
-															</select>
+															<div class="customSelect_wrapper">
+																<label class="customSelect_label">
+																	<input class="customSelect" type="text" placeholder="0+">
+																	<span class="customSelect_chevron"></span>
+																</label>
+																<ul class="customSelect_list">
+																	<li data-value="10+" class="customSelect_item">10+</li>
+																	<li data-value="30+" class="customSelect_item">30+</li>
+																	<li data-value="45+" class="customSelect_item">45+</li>
+																	<li data-value="9+" class="customSelect_item">9+</li>
+																	<li data-value="3+" class="customSelect_item">3+</li>
+																	<li data-value="77+" class="customSelect_item">77+</li>
+																</ul>
+															</div>
 														</div>
 
 														<div class="formAdditions_item">
@@ -1497,13 +1592,27 @@
 																<input type="checkbox">
 																<span></span>
 															</label>
-															<select  data-type="documentCurrency" class="documentData_selectCode">
+															<!-- <select  data-type="documentCurrency" class="documentData_selectCode">
 																<option value="">0+</option>
 																<option value='10+'>10+</option>
 																<option value='30+'>30+</option>
 																<option value='45+'>45+</option>
 																<option value='9+'>9+</option>
-															</select>
+															</select> -->
+															<div class="customSelect_wrapper">
+																<label class="customSelect_label">
+																	<input class="customSelect" type="text" placeholder="0+">
+																	<span class="customSelect_chevron"></span>
+																</label>
+																<ul class="customSelect_list">
+																	<li data-value="10+" class="customSelect_item">10+</li>
+																	<li data-value="30+" class="customSelect_item">30+</li>
+																	<li data-value="45+" class="customSelect_item">45+</li>
+																	<li data-value="9+" class="customSelect_item">9+</li>
+																	<li data-value="3+" class="customSelect_item">3+</li>
+																	<li data-value="77+" class="customSelect_item">77+</li>
+																</ul>
+															</div>
 														</div>
 
 													</div>											
@@ -2175,16 +2284,9 @@
 	<path d="M10.3353 6.83815C10.1328 6.33193 9.64254 6 9.09733 6H7.26316C6.56554 6 6 6.56556 6 7.26318C6 13.193 10.8072 18 16.737 18C17.4346 18 18 17.4345 18 16.7369L17.9999 14.9027C17.9999 14.3575 17.6679 13.8672 17.1617 13.6648L15.4048 12.9619C14.95 12.78 14.4324 12.862 14.0561 13.1755L13.6021 13.5538C13.0723 13.9953 12.2933 13.96 11.8057 13.4724L10.5276 12.1943C10.04 11.7067 10.0048 10.9277 10.4463 10.3979L10.8245 9.94398C11.1381 9.56775 11.22 9.04995 11.0381 8.59524L10.3353 6.83815Z" stroke="#8C8D92" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </symbol>
 
-<!-- Иконку карты нужно изменить -->
 <symbol id="ico_infoMapPin" viewBox="0 0 24 24">
-	<style type="text/css">
-		.st0{fill:none;stroke:#8C8D92;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;}
-	</style>
-	<path class="st0" d="M3.3,6.6c0,3.2,2.8,5.9,4.1,6.9l0,0c0.2,0.1,0.3,0.2,0.4,0.3c0.1,0,0.3,0,0.4,0c0.1,0,0.2-0.1,0.4-0.3
-		c1.3-1,4.1-3.7,4.1-6.9c0-1.2-0.5-2.4-1.4-3.3C10.4,2.5,9.2,2,8,2S5.6,2.5,4.7,3.4C3.8,4.2,3.3,5.4,3.3,6.6z"/>
-	<circle class="st0" cx="8" cy="6" r="1.4"/>
+	<path fill-rule="evenodd" clip-rule="evenodd" d="M9.40303 8.06281C10.0898 7.38356 11.0237 7 11.9997 7C12.9757 7 13.9095 7.38356 14.5963 8.06282C15.2827 8.7417 15.6663 9.66009 15.6663 10.6154C15.6663 11.9422 15.0824 13.216 14.2832 14.3273C13.5105 15.4016 12.5917 16.2469 11.9997 16.7363C11.4078 16.2469 10.4889 15.4016 9.71622 14.3273C8.91691 13.216 8.33301 11.9422 8.33301 10.6154C8.33301 9.66012 8.7166 8.74169 9.40303 8.06281ZM11.9997 5C10.5004 5 9.0602 5.58895 7.99665 6.6408C6.93274 7.69302 6.33301 9.12252 6.33301 10.6154C6.33301 12.5231 7.16393 14.204 8.09257 15.4951C9.02625 16.7933 10.1185 17.781 10.7816 18.324L10.817 18.3533L10.817 18.3533C10.9603 18.4723 11.2042 18.6748 11.5479 18.7716C11.8293 18.8508 12.17 18.8508 12.4513 18.7716C12.7951 18.6748 13.039 18.4724 13.1826 18.3531L13.2178 18.324C13.881 17.781 14.9732 16.7933 15.9068 15.4951C16.8354 14.204 17.6663 12.5231 17.6663 10.6154C17.6663 9.12251 17.0666 7.69304 16.0027 6.64081C14.9392 5.58897 13.4991 5 11.9997 5ZM11.6663 10.6667C11.6663 10.4826 11.8156 10.3333 11.9997 10.3333C12.1838 10.3333 12.333 10.4826 12.333 10.6667C12.333 10.8508 12.1838 11 11.9997 11C11.8156 11 11.6663 10.8508 11.6663 10.6667ZM11.9997 8.33333C10.711 8.33333 9.66634 9.378 9.66634 10.6667C9.66634 11.9553 10.711 13 11.9997 13C13.2883 13 14.333 11.9553 14.333 10.6667C14.333 9.378 13.2883 8.33333 11.9997 8.33333Z" fill=""/>
 </symbol>
-<!-- Иконку карты нужно изменить -->
 
 <symbol id="ico_infoGrowUp" viewBox="0 0 24 24">
 	<path d="M20.4878 7.5L14.6416 13.4375C14.5365 13.5442 14.4835 13.5976 14.4365 13.6396C13.6772 14.3193 12.5284 14.3193 11.7691 13.6396C11.722 13.5976 11.669 13.5442 11.564 13.4375C11.4589 13.3308 11.4064 13.2774 11.3594 13.2354C10.6 12.5557 9.45127 12.5557 8.69191 13.2354C8.6449 13.2774 8.59236 13.3308 8.48731 13.4375L4.4873 17.5M20.4878 7.5L20.4873 13.5M20.4878 7.5H14.4873" stroke="#F56311" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
