upd document - customer add

--- a/invoice/document.html
+++ b/invoice/document.html
@@ -1208,6 +1208,50 @@
 		</div>
 	</div>
 </div>
+<div class="modal modal_documents documentsCustomerSave">
+	<div class="modal_body">
+		<div class="modal_head d-flex justify-content-between align-items-center">
+			<div class="modal_close">
+				<svg class="mainIcon" xmlns:xlink="http://www.w3.org/1999/xlink"><use class="icoStroke" xlink:href="#ico_modalClose"/></svg>
+			</div>
+			<div class="modal_title">בחר לקוח</div>
+		</div>
+		<div class="modal_content">
+			
+            <form class="customerSave_form">
+                <label class="w-100">
+                    <p>שם משפחה/עסק <span class="required">*</span></p>
+                    <input type="text" placeholder="שם משפחה/עסק">
+                </label>
+
+                <label>
+                    <p>שם פרטי</p>
+                    <input type="text" placeholder="שם פרטי">
+                </label>
+
+                <label>
+                    <p>עוסק מורשה/ח"פ</p>
+                    <input type="text" placeholder='עוסק מורשה/ח"פ'>
+                </label>
+
+                <label>
+                    <p>אימייל</p>
+                    <input type="text" placeholder="אימייל ">
+                </label>
+
+                <label>
+                    <p>טלפון</p>
+                    <input type="text" placeholder="טלפון">
+                </label>                
+
+                <div class="w-100 d-flex flex-row-reverse">
+                    <button class="documentAdd_button">שמירה</button>
+                </div>
+            </form>
+
+		</div>
+	</div>
+</div>
 
 <!-- modal -->
 
