--- a/expoint_me_dan/partnership-rule/index.html
+++ b/expoint_me_dan/partnership-rule/index.html
@@ -218,9 +218,9 @@ document.addEventListener('DOMContentLoaded', function () {
 <link href="https://vikweb.github.io/expoint_me_dan/partnership-rule/assets/c628ea77/banners-brief.css?v=1697810654" rel="stylesheet">
 <link href="https://vikweb.github.io/expoint_me_dan/partnership-rule/assets/c628ea77/banners-brief-mob.css?v=1697810654" rel="stylesheet" media="only screen and (max-width:992px)">
 <script src="https://vikweb.github.io/expoint_me_dan/partnership-rule/assets/627e51b3/jquery.js?v=1679050986"></script>
-<link href="/assets/cashback/css/content-main.css" rel="stylesheet">
-<link href="/assets/cashback/css/content-desktop.css" rel="stylesheet" media="only screen and (min-width:1200px)">
-<script src="/assets/cashback/js/common.js"></script>
+<link href="./assets/cashback/css/content-main.css" rel="stylesheet">
+<link href="./assets/cashback/css/content-desktop.css" rel="stylesheet" media="only screen and (min-width:1200px)">
+<script src="./assets/cashback/js/common.js"></script>
 <script> 
 window.dataLayer = window.dataLayer || [];
 const sendToGTM = obj => {
@@ -1071,7 +1071,7 @@ const sendToGTM = obj => {
                 <div class="col">      
                     <div class="cashback-works_item next-pointer_ltr">
                         <div class="img-wrapper d-flex align-content-center justify-content-center">
-                            <img src="/assets/cashback/img/online-exchange.svg" alt="Онлайн обмен exchangesumo">
+                            <img src="./assets/cashback/img/online-exchange.svg" alt="Онлайн обмен exchangesumo">
                         </div>
                         <h4 class="cashback-works_title">Онлайн <br> обмен</h4>
                         <p class="cashback-works_descr">В каждой операции обменник получает прибыль за свои услуги</p>
@@ -1080,7 +1080,7 @@ const sendToGTM = obj => {
                 <div class="col">      
                     <div class="cashback-works_item next-pointer_ttb">
                         <div class="img-wrapper d-flex align-content-center justify-content-center">
-                            <img src="/assets/cashback/img/exchanger-profit.svg" alt="Прибыль обменника exchangesumo">
+                            <img src="./assets/cashback/img/exchanger-profit.svg" alt="Прибыль обменника exchangesumo">
                         </div>
                         <h4 class="cashback-works_title">Прибыль обменника</h4>
                         <p class="cashback-works_descr">Обменник перечисляет часть своей прибыли нам</p>
@@ -1090,7 +1090,7 @@ const sendToGTM = obj => {
                 <div class="col">      
                     <div class="cashback-works_item">
                         <div class="img-wrapper d-flex align-content-center justify-content-center">
-                            <img src="/assets/cashback/img/cashback-profit.svg" alt="Кэшбек exchangesumo">
+                            <img src="./assets/cashback/img/cashback-profit.svg" alt="Кэшбек exchangesumo">
                         </div>
                         <h4 class="cashback-works_title">Кэшбек</h4>
                         <p class="cashback-works_descr">Кэшбек - это часть нашей прибыли от обмена, которой мы делимся с вами</p>
@@ -1118,11 +1118,11 @@ const sendToGTM = obj => {
                         <div class="cashback-get_item-descr d-flex">
                             <p>Выберите направление и обменник с иконкой “Кэшбек”</p>
                         </div>
-                        <img src="/assets/cashback/img/cashback-profit.svg" alt="Кэшбек exchangesumo">
+                        <img src="./assets/cashback/img/cashback-profit.svg" alt="Кэшбек exchangesumo">
                     </div>
                     <picture class="order-lg-1 col-lg-5">
-                        <source media="(min-width: 1200px)" srcset="/assets/cashback/img/cashback-dest-desktop.png">
-                        <img class="w-100" src="/assets/cashback/img/cashback-dest.png" alt="Кэшбек exchangesumo">
+                        <source media="(min-width: 1200px)" srcset="./assets/cashback/img/cashback-dest-desktop.png">
+                        <img class="w-100" src="./assets/cashback/img/cashback-dest.png" alt="Кэшбек exchangesumo">
                     </picture>           
                 </div>
 
@@ -1133,7 +1133,7 @@ const sendToGTM = obj => {
                         </div>
                     </div>
                     <div class="img-wrapper order-lg-1 col-lg-5">
-                        <img src="/assets/cashback/img/cashback-complete.svg" alt="Кэшбек exchangesumo">
+                        <img src="./assets/cashback/img/cashback-complete.svg" alt="Кэшбек exchangesumo">
                     </div>
                 </div>
 
@@ -1144,7 +1144,7 @@ const sendToGTM = obj => {
                         </div>
                     </div>
                     <div class="info-block_panel col-lg-5 order-lg-1 d-flex align-items-center justify-content-center mx-auto">
-                        <img class="w-100" src="/assets/cashback/img/cashback-site.png" alt="Кэшбек exchangesumo">
+                        <img class="w-100" src="./assets/cashback/img/cashback-site.png" alt="Кэшбек exchangesumo">
                     </div>
                 </div>
 
@@ -1167,7 +1167,7 @@ const sendToGTM = obj => {
             </div>
             <div class="cashback-obtain_item cashback-obtain_profit d-lg-flex justify-content-lg-between align-items-lg-center">
                 <div class="d-flex align-items-center justify-content-between">
-                    <img class="cashback-obtain_img" src="/assets/cashback/img/cashback-profit.svg" alt="Кэшбек exchangesumo">
+                    <img class="cashback-obtain_img" src="./assets/cashback/img/cashback-profit.svg" alt="Кэшбек exchangesumo">
                     <span class="cashback-obtain_value">35%</span>
                 </div>
                 <p class="cashback-obtain_descr">Вы получите, оформив заявку с обменником, поддерживающим кэшбек.</p>
@@ -1175,7 +1175,7 @@ const sendToGTM = obj => {
             <div class="cashback-obtain_item cashback-obtain_rev d-lg-flex justify-content-lg-between align-items-lg-center">
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="info-block_panel">
-                        <img class="cashback-obtain_img" src="/assets/cashback/img/cashback-rev.png" alt="Кэшбек exchangesumo">
+                        <img class="cashback-obtain_img" src="./assets/cashback/img/cashback-rev.png" alt="Кэшбек exchangesumo">
                     </div>
                     <span class="cashback-obtain_value">+35%</span>
                 </div>
@@ -1183,7 +1183,7 @@ const sendToGTM = obj => {
             </div>
             <div class="cashback-obtain_item cashback-obtain_rise d-lg-flex justify-content-lg-between align-items-lg-center">
                 <div class="d-flex align-items-center justify-content-between">
-                        <img class="cashback-obtain_img" src="/assets/cashback/img/cashback-rise.svg" alt="Кэшбек exchangesumo">
+                        <img class="cashback-obtain_img" src="./assets/cashback/img/cashback-rise.svg" alt="Кэшбек exchangesumo">
                         <span class="cashback-obtain_value">+2-10%</span>
                 </div>
                 <p class="cashback-obtain_descr">Чем  дольше вы с нами и чем больше обменов вы проводите через нас, тем больше ваш <a href="#">БОНУС ЛОЯЛЬНОСТИ</a>.</p>
@@ -1203,7 +1203,7 @@ const sendToGTM = obj => {
             </div>
             <div class="cashback-miss_item d-flex flex-column flex-lg-row align-items-center">
                 <div class="col-lg-4">
-                    <img src="/assets/cashback/img/cashback-ex-miss.svg" alt="Кэшбек exchangesumo">
+                    <img src="./assets/cashback/img/cashback-ex-miss.svg" alt="Кэшбек exchangesumo">
                 </div>
                 <div class="cashback-miss_wrapper">
                     <h4 class="cashback-miss_subtitle">Вы перешли с другого мониторинга</h4>
@@ -1212,7 +1212,7 @@ const sendToGTM = obj => {
             </div>
             <div class="cashback-miss_item d-flex flex-column flex-lg-row align-items-center">
                 <div class="col-lg-4">
-                    <img src="/assets/cashback/img/cashback-ex-lose.svg" alt="Кэшбек exchangesumo">
+                    <img src="./assets/cashback/img/cashback-ex-lose.svg" alt="Кэшбек exchangesumo">
                 </div>
                 <div class="cashback-miss_wrapper">
                     <h4 class="cashback-miss_subtitle mt-4 mt-lg-0">Обменник ничего не заработал</h4>
@@ -1221,7 +1221,7 @@ const sendToGTM = obj => {
             </div>
             <div class="cashback-miss_item d-flex flex-column flex-lg-row align-items-center">
                 <div class="col-lg-4">
-                    <img src="/assets/cashback/img/cashback-ex-another.svg" alt="Кэшбек exchangesumo">
+                    <img src="./assets/cashback/img/cashback-ex-another.svg" alt="Кэшбек exchangesumo">
                 </div>
                 <div class="cashback-miss_wrapper">
                     <h4 class="cashback-miss_subtitle">Вы уже закреплены за другим мониторингом</h4>
@@ -1245,19 +1245,19 @@ const sendToGTM = obj => {
             <div class="cashback-howto_tabs">
                 <div class="cashback-howto_tabs-nav d-flex align-items-end">
                     <a href="#cashback-howto-tab1" class="cashback-howto_tabs-control">
-                        <img class="cashback-howto_tabs-ico" src="/assets/cashback/img/cashback-safari_ico.svg" alt="safari browser">
+                        <img class="cashback-howto_tabs-ico" src="./assets/cashback/img/cashback-safari_ico.svg" alt="safari browser">
                         <span>Safari</span>
                     </a>
                     <a href="#cashback-howto-tab2" class="cashback-howto_tabs-control">
-                        <img class="cashback-howto_tabs-ico" src="/assets/cashback/img/cashback-chrome.svg" alt="chrome browser">
+                        <img class="cashback-howto_tabs-ico" src="./assets/cashback/img/cashback-chrome.svg" alt="chrome browser">
                         <span>Chrome</span>
                     </a>
                     <a href="#cashback-howto-tab3" class="cashback-howto_tabs-control">
-                        <img class="cashback-howto_tabs-ico" src="/assets/cashback/img/cashback-mozilla.svg" alt="mozilla browser">
+                        <img class="cashback-howto_tabs-ico" src="./assets/cashback/img/cashback-mozilla.svg" alt="mozilla browser">
                         <span>Mozilla</span>
                     </a>
                     <a href="#cashback-howto-tab4" class="cashback-howto_tabs-control">
-                        <img class="cashback-howto_tabs-ico" src="/assets/cashback/img/cashback-other-browsers.svg" alt="other browsers">
+                        <img class="cashback-howto_tabs-ico" src="./assets/cashback/img/cashback-other-browsers.svg" alt="other browsers">
                         <span>Другие</span>
                     </a>
                 </div>
@@ -1281,7 +1281,7 @@ const sendToGTM = obj => {
                     </div>
                     <div id="cashback-howto-tab3" class="cashback-howto_tab">
                         <ol>
-                            <li>Нажмите кнопку <img src="/assets/cashback/img/cashback-mozilla-menu.png" alt="mozilla browser menu"> и выберите <b>Настройки</b>.</li>
+                            <li>Нажмите кнопку <img src="./assets/cashback/img/cashback-mozilla-menu.png" alt="mozilla browser menu"> и выберите <b>Настройки</b>.</li>
                             <li>Выберите панель <b>Приватность и Защита</b> и перейдите в раздел <b>Куки и данные сайтов</b>.</li>
                             <li>Нажмите на кнопку <b>Управление данными…</b>. Появится окно <b>Управление куками и данными сайтов</b>.</li>
                             <li>Чтобы удалить все куки и данные хранилища для веб-сайта, нажмите на кнопку <b>Удалить все показанные</b></li>
