--- a/gamestorm/advertisers.html
+++ b/gamestorm/advertisers.html
@@ -47,7 +47,7 @@
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
 				<div class="col-lg-3 col-6">
-					<a href="/" class="navigation_logo"><img src="./assets/images/main/main-logo.svg" alt="game storm logo"></a>
+					<a href="https://evheniynahola.github.io/gamestorm/" class="navigation_logo"><img src="./assets/images/main/main-logo.svg" alt="game storm logo"></a>
 				</div>
 				<div class="col-lg-7 col-4">
 					<nav class="navigation_body" role="navigation">
